Fix room list item overflow

--- a/src/Home.module.css
+++ b/src/Home.module.css
@@ -1,5 +1,4 @@
 .roomList {
-  
 }
 
 .roomListItem {
@@ -23,6 +22,7 @@
   width: 32px;
   height: 32px;
   border-radius: 32px;
+  flex-shrink: 0;
 }
 
 .roomAvatar > * {
